@@ -76,6 +76,8 @@ Version 1.3.1+svn:
      memory corruptions
    * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
    * fixed autosaves not getting deleted for last campaign scenario and multiplayer (bug #8762)
+   * Performance : wml compression is done in the helper threads instead of
+     the main thread
 
 Version 1.3.1:
  * Campaignd
